Adding dynamic web application (Tomcat) (15,16-22)

--- a/Employee-Details/src/main/webapp/EmployeeFile.html
+++ b/Employee-Details/src/main/webapp/EmployeeFile.html
@@ -2,11 +2,12 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Employee-Company-Details</title>
 </head>
 <body>
 
-<a href="EmployeeFile.html" >Employee1</a>
+<a href="EmployeeDetails.employee?name=R.DORASRIVIGNESH&age=25&working=true">Employee</a>
 
+<a href="EmployeeDetails.employee?empName=name&age=Age&email=email&password=Password&address=Address">	EmployeeRegistrationForm</a>
 </body>
 </html>
